--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -22,12 +22,12 @@
 </div>
 <div id="mySidenav" class="sidenav">
   <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
-  <a href="./dashboard/employee"> &nbsp;&nbsp;&nbsp;<i class="bi bi-people"></i> &nbsp;&nbsp;&nbsp;Employees</a>
-  <a href="./dashboard/departments"> &nbsp;&nbsp;&nbsp;<i class="bi bi-speedometer2"></i>&nbsp;&nbsp;&nbsp; Departments</a>
-  <a href="./dashboard/salaries"> &nbsp;&nbsp;&nbsp;<i class="bi bi-wallet2"></i> &nbsp;&nbsp;&nbsp;Salaries</a>
-  <a href="./dashboard/task"> &nbsp;&nbsp;&nbsp;<i class="bi bi-person-workspace"></i> &nbsp;&nbsp;&nbsp;Tasks</a>
-  <a href="./dashboard/managers"> &nbsp;&nbsp;&nbsp;<i class="bi bi-kanban"></i> &nbsp;&nbsp;&nbsp;Managers</a>
-  <a href="./dashboard/status"> &nbsp;&nbsp;&nbsp;<i class="bi bi-pc-display-horizontal"></i>&nbsp;&nbsp;&nbsp;Status</a>
+  <a routerLink="./dashboard/employee"> &nbsp;&nbsp;&nbsp;<i class="bi bi-people"></i> &nbsp;&nbsp;&nbsp;Employees</a>
+  <a routerLink="./dashboard/departments"> &nbsp;&nbsp;&nbsp;<i class="bi bi-speedometer2"></i>&nbsp;&nbsp;&nbsp; Departments</a>
+  <a routerLink="./dashboard/salaries"> &nbsp;&nbsp;&nbsp;<i class="bi bi-wallet2"></i> &nbsp;&nbsp;&nbsp;Salaries</a>
+  <a routerLink="./dashboard/task"> &nbsp;&nbsp;&nbsp;<i class="bi bi-person-workspace"></i> &nbsp;&nbsp;&nbsp;Tasks</a>
+  <a routerLink="./dashboard/managers"> &nbsp;&nbsp;&nbsp;<i class="bi bi-kanban"></i> &nbsp;&nbsp;&nbsp;Managers</a>
+  <a routerLink="./dashboard/status"> &nbsp;&nbsp;&nbsp;<i class="bi bi-pc-display-horizontal"></i>&nbsp;&nbsp;&nbsp;Status</a>
 </div>
 <div>
   <!-- <router-outlet></router-outlet> -->
