--- a/src/app/layout/department/department.component.html
+++ b/src/app/layout/department/department.component.html
@@ -1,1 +1,24 @@
-<p>department works!</p>
+<div class="page-title">
+    <h6>Employee Department List</h6>
+</div>
+<div class="emplTable bg-white p-5 mt-5 rounded">
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Department</th>
+
+          </tr>
+                </thead>
+        <tbody>
+          <tr *ngFor="let emp of employees">
+            <th>{{emp.id}}</th>
+            <td>{{emp.name}}</td>
+            <td>{{emp.email}}</td>
+            <td>{{emp.empDeprt}}</td>
+           </tr>
+        </tbody>
+      </table>
+</div>
