--- a/src/app/layout/managers/managers.component.html
+++ b/src/app/layout/managers/managers.component.html
@@ -1,1 +1,23 @@
-<p>managers works!</p>
+<div class="page-title">
+    <h6>Employee Reporting List</h6>
+</div>
+<div class="emplTable bg-white p-5 mt-5 rounded">
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Reporting</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let emp of employees">
+            <th>{{emp.id}}</th>
+            <td>{{emp.name}}</td>
+            <td>{{emp.email}}</td>
+            <td>{{emp.empReport}}</td>
+           </tr>
+        </tbody>
+      </table>
+</div>
